# dani-mcp-sse-server

./: README.md  pyproject.toml
src/dani_mcp_sse_server/: __init__.py  client.py  server.py
